--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
   <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Примерка не выходя из дома!" />
+  <meta name="description" content="Выбирайте ковер не выходя из дома!" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <title>INROOM TECH</title>
+  <title>BritishAsia Home</title>
 </head>
 
 <body>
