--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <title>BritishAsia Home</title>
+  <title>INROOM</title>
 </head>
 
 <body>
